recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  return length(l)
}